# designos

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INTERNAL-PILOT-README.md  LICENSE  MANIFEST.in  NEW-REPO-INIT.sh  README.md  README.zh-CN.md  REVIEW-MANIFEST.md  install.sh  package.json  pyproject.toml  pyrightconfig.json  ruff.toml
.claude/commands/: uxeval.md
.cursor/rules/: designos.mdc  uxeval.mdc
.factory/: CHANGELOG.md  CONTRACT.md  README.md  __init__.py  _kernel_bridge.py  pytest.ini
.factory/archetypes/: __init__.py  analysis.yaml  archetype_schema.py  creative-generation.yaml  evaluation.yaml  generation.yaml  loader.py
.factory/tests/: conftest.py  test_archetype_analysis.py  test_archetype_creative_generation.py  test_archetype_evaluation.py  test_extract.py  test_kernel_bridge.py  test_scaffold.py  test_validate.py
.factory/tools/: extract.py  scaffold.py  validate.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  npm-publish.yml  publish.yml
designos/: __init__.py  __main__.py
designos/cli/: __init__.py  ide_detector.py  installer.py  main.py
docs/: INDEX.md  README.md  RELEASE.md  STATUS-DEFINITION.md  api-reference.md  architecture.md  benchmark.md  getting-started.md  troubleshooting.md  内测操作手册.md
docs/architecture/: 01-总体架构.md  02-Kernel-设计.md  03-Skill-规范.md
docs/archive/: AUDIT_REPORT.md  CLAUDE_HANDOFF_START.md  COMPLETION_REPORT.md  CURRENT_PROGRESS.md  ENTERPRISE_POLISH_PLAN.md  FINAL_EXECUTION_REPORT.md  FINAL_STATUS.md  METHODOLOGY_COVERAGE_ANALYSIS.md  METHODOLOGY_EXECUTION_PLAN.md  P0_COMPLETION_SUMMARY.md  P0_P1_COMPLETE_REPORT.md  P0_P1_P2_FINAL_REPORT.md  PRD2PROTO_V2_DELIVERY_REPORT.md  README.md  ULTIMATE_GOAL_ASSESSMENT.md  自动化任务执行日志.md
docs/audit/: REPOSITORY-EVIDENCE-POLLUTION-AUDIT.md
docs/decisions/: ADR-001-五轮决策汇总.md  ADR-002-Skill矩阵修正与Playwright共享.md  ADR-003-Skill矩阵收敛与SkillGroup形态.md
docs/examples/: e-commerce-ux.md  saas-branding.md
docs/handoff/: README.md
docs/plans/: 01-项目排期.md  02-并行执行任务.md  03-Sub-agent-分工.md  2026-05-21-batch-1-runtime-status-fix.md  2026-05-21-batch-2-frontmatter-preflight-fix.md  2026-05-21-batch-3a-run-history-closure.md  2026-05-21-batch-3b-resume-closure.md  2026-05-21-batch-4a-stage7-output-contract.md  2026-05-21-batch-4b-image-analyzer-contract-fix.md  2026-05-22-batch-4d-evidence-quality-gate.md  2026-05-22-batch-4e-final-delivery-readiness.md  2026-05-22-batch-4f-auto-remediation-before-pause.md  2026-05-22-batch-4g-runtime-audit-and-bounded-fallback.md  2026-05-22-batch-4h-proactive-input-planning.md  2026-05-25-route-b-batch-1-capture-mission-v2-core.md  2026-05-25-route-b-batch-2-evidence-fusion-v2-core.md  2026-05-25-route-b-batch-3-critical-path-coverage-engine-core.md  2026-05-26-route-b-batch-4-bounded-clarification-ux-core.md  2026-05-26-route-b-batch-5-final-delivery-hardening-core.md  2026-05-26-route-b-batch-6-first-pass-success-engine-core.md  2026-05-26-route-b-batch-7-targeted-evidence-acquisition-core.md  2026-05-27-route-b-batch-10-golden-benchmark-sweep.md  2026-05-27-route-b-batch-8-metrics-instrumentation-benchmark-harness-core.md  2026-05-27-route-b-batch-9-benchmark-driven-quality-lift-core.md  2026-05-28-route-b-batch-11-trusted-mapping-lift-for-salvageable-cases.md  2026-05-28-webmode-batch1-completion.md  2026-05-28-webmode-phase1-archive.md  2026-05-29-prd2proto-implementation-plan.md  2026-05-29-prd2proto-p1-completion.md  2026-05-29-prd2proto-p1-trial-runbook.md  2026-06-01-web-mode-baseline-w1.md  M1-完成报告.md  wave3-validation-checklist.md
docs/share/: 01-DesignOS完整方案沉淀.md  02-DesignOS分享演讲稿.html  README.md
docs/skills/: README.md
docs/webmode-skills/: 00_交接总览.md  01_执行过程还原与最佳实践.md  02_skill封装方案.md  03_SKILL草案.md  04_实现任务清单.md
eval/failure-cases/: component-strategy-fail.json  information-architecture-fail.json  input-diagnosis-fail.json  page-flow-fail.json  state-matrix-fail.json
eval/rubrics/: prd2proto-senior-review-rubric.md
kernel/: __init__.py
kernel/checkpoint/: __init__.py  interrupt.py  manager.py  state_serializer.py
kernel/config/: __init__.py  env_loader.py  loader.py
kernel/contracts/: __init__.py  enums.py  errors.py  interfaces.py  schemas.py
kernel/errors/: __init__.py
knowledge/: README.md  manifest.yaml
legacy/: Agent自主进化方案.md
mcp-servers/excel-builder/: README.md  core.py  pyproject.toml  schemas.py  server.py
mcp-servers/excel-builder/tests/: conftest.py  test_core.py
mcp-servers/frontend-codegen/: core.py  pyproject.toml  schemas.py  server.py
mcp-servers/frontend-codegen/tests/: test_core.py
mcp-servers/heuristic-engine/: README.md  core.py  llm_judge.py  principles_library.py  pyproject.toml  rules.py  schemas.py  server.py
mcp-servers/heuristic-engine/tests/: conftest.py  test_core.py  test_rules.py
mcp-servers/image-analyzer/: README.md  benchmark_harness.py  core.py  ocr_runtime.py  probe_ocr.py  pyproject.toml  schemas.py  server.py  vision_ocr.swift
mcp-servers/image-analyzer/tests/: conftest.py  test_core.py
mcp-servers/image-analyzer/tests/fixtures/: screens-description.md
mcp-servers/pdf-parser/: README.md  core.py  pyproject.toml  schemas.py  server.py
mcp-servers/pdf-parser/tests/: conftest.py  test_core.py  test_server.py
mcp-servers/pdf-parser/tests/fixtures/: generate.py
mcp-servers/playwright-driver/: core.py  evidence_builder.py  heuristic_adapter.py  pyproject.toml  retry_planner.py  schemas.py  script_executor.py  server.py
mcp-servers/playwright-driver/tests/: conftest.py  test_core.py  test_integration.py
my-project/: .gitignore  README.md  designos.project.yaml
scripts/: check-versions.sh  release.sh  sync-skills.sh
skills/: status.matrix.yaml
tests/: __init__.py  conftest.py
(+537 files in other folders)
