[project]
name = "designos"
version = "0.6.2"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
description = "DesignOS — AI-native 设计能力包，封装高级设计专家方法论为可共享 Skill 矩阵"
authors = [{name = "young"}]
readme = "README.md"
keywords = ["ai", "design", "agent", "skills", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "anthropic>=0.40",
    "openai>=1.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "ruff>=0.5",
    "pyright>=1.1",
]
trace = [
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
]
uxeval = [
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
    "Pillow>=10.0",
]
web = [
    "playwright>=1.40",
]
all = [
    "designos[uxeval]",
    "designos[trace]",
    "designos[web]",
]

[project.scripts]
designos = "designos.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["designos", "kernel"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "designos/_bundled/skills"
"mcp-servers" = "designos/_bundled/mcp-servers"
"AGENTS.md" = "designos/_bundled/AGENTS.md"

[tool.hatch.build.targets.sdist]
include = [
    "/kernel",
    "/designos",
    "/skills",
    "/mcp-servers",
    "/AGENTS.md",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]
exclude = [
    "/tests",
    "/legacy",
    "*__pycache__*",
    "*.pyc",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end smoke tests (slow, requires external dependencies)",
    "integration: cross-module integration tests",
    "slow: tests that take >5s to run",
    "unit: pure-logic tests that need no optional runtime dependency (any environment).",
    "requires_playwright: needs the `playwright` Python package importable (web mode).",
    "browser_smoke: needs chromium binaries launchable (real-browser web-mode smoke).",
]
