[project]
name = "designos-excel-builder"
version = "0.1.0"
description = "Excel report generation MCP server for DesignOS"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
