[project]
name = "designos-mcp-heuristic-engine"
version = "0.1.0"
requires-python = ">=3.11"
description = "MCP Server for heuristic UX evaluation (rule engine + LLM vision judge)"
dependencies = [
    "mcp>=1.0",
    "pydantic>=2.0",
    "anthropic>=0.40",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
designos-heuristic-engine = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
