[project]
name = "designos-mcp-pdf-parser"
version = "0.1.0"
requires-python = ">=3.11"
description = "MCP Server for PDF parsing with section extraction"
dependencies = [
    "mcp>=1.0",
    "pdfplumber>=0.11",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "reportlab>=4.0",
]

[project.scripts]
designos-pdf-parser = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
